style: fix bottom scroll issue on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,7 +10,6 @@
 	}
 
 	body {
-		overscroll-behavior-y: none;
 		position: fixed;
 		min-height: 100vh;
 		min-width: 100%;
